 * Fix Google Drive compatibility

KeePassDroid (2.5.13)
 * Ensure output files are truncated

KeePassDroid (2.5.12)
 * Fix storing password with biometrics

KeePassDroid (2.5.11)
 * Fix crash on invalid length databases

KeePassDroid (2.5.10)
 * Fix crash on database create

KeePassDroid (2.5.9)
 * Bug fixes

KeePassDroid (2.5.8)
 * Add mimetype

KeePassDroid (2.5.7)
 * Crash fixes
 * Reference handling fixes

KeePassDroid (2.5.6)
 * Bug fixes
 * Updated Russian translations

KeePassDroid (2.5.5)
 * Add auto login setting

KeePassDroid (2.5.4)
 * Bug fixes

KeePassDroid (2.5.3)
 * Bug fixes
 * Move more into compat library

KeePassDroid (2.5.2)
 * Bug fixes
 * Updated Italian translations

KeePassDroid (2.5.1)
 * Updated Russian translations
 * Small fixes

KeePassDroid (2.5.0)
 * Switch from fingerprint to biometric API

KeePassDroid (2.4.2)
 * Bump android sdk version
 * Update Italian translations

KeePassDroid (2.4.1)
 * Fix notification timeout
 * Updated Russian translatons

KeePassDroid (2.4)
 * New fingerprint setting
 * Better handling for large attachments
 * Bug fixes
 * Updated Dutch translations
 * Updated German translations
 * Updated French translations
 * Updated Russian translations
 * Updated Polish translations

KeePassDroid (2.3.4)
 * Fix crash

KeePassDroid (2.3.3)
 * Merge 2.3 branch

KeePassDroid (2.3.2)
 * Bug fixes

KeePassDroid (2.3.1)
 * Fix notifications
 * Add adaptive icon

KeePassDroid (2.3)
 * Drop support for pre-Ice Cream Sandwhich devices
 * Implement runtime permissions Marshamllow and later

KeePassDroid (2.2.2.5)
 * Remove donate link from Play Store version

KeePassDroid (2.2.2.4)
 * Handle fingerprint key invalidation

KeePassDroid (2.2.2.3)
 * Improve fingerprint error handling
 * Updated Russian translations

KeePassDroid (2.2.2.2)
 * Prevent fingerprint infinite loop
 * Update Italian translations

KeePassDroid (2.2.2.1)
 * Prevent fingerprint exception

KeePassDroid (2.2.2)
 * Fix date integer overflow