@@ -1,3 +1,6 @@
+ * Add Keyfile 2.0 support
+
+KeePassDroid (2.5.14)
  * Fix Google Drive compatibility
 
 KeePassDroid (2.5.13)
